# FYCPhysicsEngine

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Application/: CMakeLists.txt
Application/include/: Application.hpp  Camera.hpp  Canon.hpp  CharacterController.hpp  EnemyParameters.hpp  EnnemiParameters.hpp  ImGuiLib.hpp  WorldSerializer.hpp
Application/src/: Application.cpp  Camera.cpp  Canon.cpp  CharacterController.cpp  EnemyParameters.cpp  EnnemiParameters.cpp  WorldSerializer.cpp  main.cpp
Levels/: character.fyc  enemies.fyc  world.fyc
Libraries/: CMakeLists.txt
Libraries/raylib-5.5/: Modifications.txt
Physics/: CMakeLists.txt
Physics/include/Physics/: AABB.hpp  Circle.hpp  Collision.hpp  Math.hpp  Particle.hpp  Physics.hpp  World.hpp
Physics/src/: AABB.cpp  Circle.cpp  Collision.cpp  Math.cpp  Particle.cpp  Physics.cpp  World.cpp
